--- a/index.html
+++ b/index.html
@@ -221,6 +221,224 @@
             </div>
           </div>
 
+          <div class="article-interrupter">
+            <figure id="theory-of-inflation">
+              <figcaption>
+                <h2>The Theory of Inflation</h2>
+                <p>Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</p>
+              </figcaption>
+
+              <div class="graphic">
+                <div id="theory-inflation-image">
+                  <img src="images/theory-of-inflation.png"/>
+                  <div id="theory-inflation-box1" class="theory-inflation-box">
+                    <p>
+                      <span>THE UNIVERSE</span>
+                      &nbsp; is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.
+                    </p>
+                  </div>
+
+                  <div id="theory-inflation-box2" class="theory-inflation-box">
+                    <p>
+                      <span>NOT ENOUGH TIME</span>
+                      &nbsp; The universe is not old enough for light to have traveled the vast distance from one side of the universe to the other, and there has not been enough time for scattered patches of hot and cold to mix into an even temperature.
+                    </p>
+                  </div>
+
+                  <div id="theory-inflation-box3" class="theory-inflation-box">
+                    <p>
+                      <span>DISTANT COFFEE</span>
+                      &nbsp; At a smaller scale, imagine using a telescope to look a mile in one direction. You see a coffee cup, and from the amount of steam, you can estimate its temperature and how much it has cooled.
+                    </p>
+                  </div>
+
+                  <div id="theory-inflation-box4" class="theory-inflation-box">
+                    <p>
+                      <span>COFFEE EVERYWHERE</span>
+                      &nbsp; Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation.
+                    </p>
+                  </div>
+
+                  <div id="theory-inflation-box5" class="theory-inflation-box">
+                    <p>
+                      <span>STILL NOT ENOUGH TIME</span>
+                      &nbsp; There has not been enough time to carry coffee cups from place to place before they get cold. But if all the coffee cups were somehow filled from a single coffee pot, all at the same time, that might explain their even temperature.
+                    </p>
+                  </div>
+
+                  <div id="theory-inflation-box6" class="theory-inflation-box">
+                    <p>
+                      <span>INFLATION</span>
+                      &nbsp; solves this problem. The theory proposes that, less than a trillionth of a second after the Big Bang, the universe expanded faster than the speed of light. Tiny ripples in the violently expanding energy field eventually grew into the large-scale structures of the universe.
+                    </p>
+                  </div>
+
+                  <div id="theory-inflation-box7" class="theory-inflation-box">
+                    <p>
+                      <span>FLUCTUATION</span>
+                      &nbsp; Astronomers have now detected evidence of these ancient fluctuations in swirls of polarized light in the cosmic background radiation, which is energy left over from the early universe. These are gravitational waves predicted by Einstein.
+                    </p>
+                  </div>
+
+                  <div id="theory-inflation-box8" class="theory-inflation-box">
+                    <p>
+                      <span>EXPANSION</span>
+                      &nbsp; Returning to our coffee, imagine a single, central pot expanding faster than light and cooling to an even temperature as it expands. That is something like inflation. And the structure of the universe mirrors the froth and foam of the original pot.
+                    </p>
+                  </div>
+                </div>
+
+                <footer id="theory-inflation-credit">
+                  <p>By LARRY BUCHANAN and JOHNATHAN CORUM</p>
+                </footer>
+
+              </div>
+            </figure>
+          </div>
+
+          <div class="article-body">
+            <div class="body-text">
+              <p>
+              Dr. Kovac said the chance that the results were a fluke was only one in 10 million.
+
+              Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expected such a definite confirmation in his lifetime.
+
+              “With nature, you have to be lucky,” he said. “Apparently we have been lucky.”
+
+              The results are the closely guarded distillation of three years’ worth of observations and analysis. Eschewing email for fear of a leak, Dr. Kovac personally delivered drafts of his work to a select few, meeting with Dr. Guth, who is now a professor at Massachusetts Institute of Technology (as is his son, Larry, who was sleeping that night in 1979), in his office last week.
+
+              “It was a very special moment, and one we took very seriously as scientists,” said Dr. Kovac, who chose his words as carefully as he tended his radio telescopes.
+
+              Andrei Linde of Stanford, a prolific theorist who first described the most popular variant of inflation, known as chaotic inflation, in 1983, was about to go on vacation in the Caribbean last week when Chao-Lin Kuo, a Stanford colleague and a member of Dr. Kovac’s team, knocked on his door with a bottle of Champagne to tell him the news.
+              </p>
+
+              <figure id="stanford-video">
+                <iframe width="420" height="315" src="https://youtube.com/embed/ZlfIVEy_YOA?wmode=transparent">
+                </iframe>
+                <figcaption>
+                  <span class="info">
+                    Stanford Professor Andrei Linde celebrates physics breakthrough
+                  </span>
+                  <span class="credit">Video by Stanford University</span>
+                </figcaption>
+              </figure>
+
+              <p>
+              Confused, Dr. Linde called out to his wife, asking if she had ordered anything.
+
+              “And then I told him that in the beginning we thought that this was a delivery but we did not think that we ordered anything, but I simply forgot that actually I did order it, 30 years ago,” Dr. Linde wrote in an email.
+
+              Calling from Bonaire, the Dutch Caribbean island, Dr. Linde said he was still hyperventilating. “Having news like this is the best way of spoiling a vacation,” he said.
+
+              By last weekend, as social media was buzzing with rumors that inflation had been seen and news spread, astrophysicists responded with a mixture of jubilation and caution.
+
+              Max Tegmark, a cosmologist at M.I.T., wrote in an email, “I think that if this stays true, it will go down as one of the greatest discoveries in the history of science.”
+
+              John E. Carlstrom of the University of Chicago, Dr. Kovac’s mentor and head of a competing project called the South Pole Telescope, pronounced himself deeply impressed. “I think the results are beautiful and very convincing,” he said.
+              </p>
+
+              <div class="sign-up">
+                <h2>Science Times</h2>
+                <p>We'll bring you stories that capture the wonders of the
+                   human body, nature and the consmos.</p>
+              </div>
+
+              <p>
+              Paul J. Steinhardt of Princeton, author of a competitor to inflation that posits the clash of a pair of universes as the cause of genesis, said that if true, the Bicep result would eliminate his model, but he expressed reservations about inflation.
+
+              Lawrence M. Krauss of Arizona State and others also emphasized the need for confirmation, noting that the new results exceeded earlier estimates based on temperature maps of the cosmic background by the European Space Agency’s Planck satellite and other assumptions about the universe.
+
+              “So we will need to wait and see before we jump up and down,” Dr. Krauss said.
+
+              Corroboration might not be long in coming. The Planck spacecraft will report its own findings this year. At least a dozen other teams are trying similar measurements from balloons, mountaintops and space.
+              </p>
+
+              <p><strong>Spirals in the Sky</strong></p>
+
+              <p>
+              Gravity waves are the latest and deepest secret yet pried out of the cosmic microwaves, which were discovered accidentally by Arno Penzias and Robert Wilson at Bell Labs 50 years ago. They won the Nobel Prize.
+
+              Dr. Kovac has spent his career trying to read the secrets of these waves. He is one of four leaders of Bicep, which has operated a series of increasingly sensitive radio telescopes at the South Pole, where the thin, dry air creates ideal observing conditions. The others are Clement Pryke of the University of Minnesota, Jamie Bock of the California Institute of Technology and Dr. Kuo of Stanford.
+
+              “The South Pole is the closest you can get to space and still be on the ground,” Dr. Kovac said. He has been there 23 times, he said, wintering over in 1994. “I’ve been hooked ever since,” he said.
+              </p>
+
+              <figure class="telescope-figure">
+                <img id="telescope-image" src="images/telescope.jpg"/>
+                <figcaption>
+                  <span class="info">
+                    The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.
+                  </span>
+                  <span class="credit">
+                    Steffen Richter/Associated Press
+                  </span>
+                </figcaption>
+              </figure>
+
+              <p>
+              In 2002, he was part of a team that discovered that the microwave radiation was polarized, meaning the light waves had a slight preference to vibrate in one direction rather than another.
+
+              This was a step toward the ultimate goal of detecting the gravitational waves from inflation. Such waves, squeezing space in one direction and stretching it in another as they go by, would twist the direction of polarization of the microwaves, theorists said. As a result, maps of the polarization in the sky should have little arrows going in spirals.
+
+              Detecting those spirals required measuring infinitesimally small differences in the temperature of the microwaves. The group’s telescope, Bicep2, is basically a giant superconducting thermometer.
+
+              “We had no expectations what we would see,” Dr. Kovac said.
+
+              The strength of the signal surprised the researchers, and they spent a year burning up time on a Harvard supercomputer, making sure they had things right and worrying that competitors might beat them to the breakthrough.
+              </p>
+
+              <p><strong>A Special Time</strong></p>
+
+              <p>
+              The data traced the onset of inflation to a time that physicists like Dr. Guth, staying up late in his Palo Alto house 35 years ago, suspected was a special break point in the evolution of the universe.
+
+              Physicists recognize four forces at work in the world today: gravity, electromagnetism, and strong and weak nuclear forces. But they have long suspected that those are simply different manifestations of a single unified force that ruled the universe in its earliest, hottest moments.
+
+              As the universe cooled, according to this theory, there was a fall from grace, like some old folk mythology of gods or brothers falling out with each other. The laws of physics evolved, with one force after another splitting away.
+
+              That was where Dr. Guth came in.
+
+              Under some circumstances, a glass of water can stay liquid as the temperature falls below 32 degrees, until it is disturbed, at which point it will rapidly freeze, releasing latent heat.
+
+              Similarly, the universe could “supercool” and stay in a unified state too long. In that case, space itself would become imbued with a mysterious latent energy.
+
+              Inserted into Einstein’s equations, the latent energy would act as a kind of antigravity, and the universe would blow itself up. Since it was space itself supplying the repulsive force, the more space was created, the harder it pushed apart.
+
+              What would become our observable universe mushroomed in size at least a trillion trillionfold — from a submicroscopic speck of primordial energy to the size of a grapefruit — in less than a cosmic eye-blink.
+
+              Almost as quickly, this pulse would subside, relaxing into ordinary particles and radiation. All of normal cosmic history was still ahead, resulting in today’s observable universe, a patch of sky and stars billions of light-years across. “It’s often said that there is no such thing as a free lunch,” Dr. Guth likes to say, “but the universe might be the ultimate free lunch.”
+
+              Make that free lunches. Most of the hundred or so models resulting from Dr. Guth’s original vision suggest that inflation, once started, is eternal. Even as our own universe settled down to a comfortable homey expansion, the rest of the cosmos will continue blowing up, spinning off other bubbles endlessly, a concept known as the multiverse.
+
+              So the future of the cosmos is perhaps bright and fecund, but do not bother asking about going any deeper into the past.
+              </p>
+
+              <button class="comments-button">
+                <i>
+                  <span class="button-text">
+                    <span class="count">615</span>
+                    <span class="units">Comments</span>
+                  </span>
+                </i>
+              </button>
+
+              <p>
+                We might never know what happened before inflation, at the very beginning, because inflation erases everything that came before it. All the chaos and randomness of the primordial moment are swept away, forever out of our view.
+
+                “If you trace your cosmic roots,” said Abraham Loeb, a Harvard-Smithsonian astronomer who was not part of the team, “you wind up at inflation.”
+              </p>
+
+              <footer class="article-body-footer">
+                <div>
+                </div>
+                <p>
+                  A version of this article appears in print on March 18, 2014, on Page A1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun.
+                  Order Reprints | Today's Paper | Subscribe
+                </p>
+              </footer>
+            </div>
+          </div>
+
         </div>
       </article>
     </div>
